peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peerauth-default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
