podTemplate.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    jenkins: jenkins-pipeline
spec:
  volumes:
    - name: sharedvolume
      emptyDir: {}
    - name: kaniko-secret
      secret:
        secretName: dockercred
        items:
          - key: .dockerconfigjson
            path: config.json
  serviceAccountName: jenkins
  securityContext:
    runAsUser: 0
  containers:
  - name: maven
    image: maven:3.9.4-amazoncorretto-17
    imagePullPolicy: Always
    ttyEnabled: true
    command:
      - sleep
    args:
      - 99d
